src/styles/style.scss
@import '../../node_modules/bootstrap/scss/bootstrap';
@import '../../node_modules/aos/dist/aos';

:root{
  --mainColor: #DA322A;
  --secondColor: #751B19;
  --bgColor: #252525;
  padding: constant(safe-area-inset-top) constant(safe-area-inset-right) constant(safe-area-inset-bottom) constant(safe-area-inset-left);
}
body{
  font-family: -apple-system, BlinkMacSystemFont, //Safari Mac/iOS, Chrome
  'Segoe UI',Roboto,Oxygen, //Window, Android, KDE
  Ubuntu,Cantarell,'Fira Sans', //Ubuntu, Gnome, Firefox OS
  'Open Sans','Droid Sans','Helvetica Neue',sans-serif; //Old
  font-size: 16px;
}

hr{
  margin-top: 1rem;
  margin-bottom: 1rem;
  border: 0;
  border-top: 1px solid #fff;
}

.font-format{
  font-family: HelveticaNeue;
  font-weight: normal;
  font-style: normal;
  font-stretch: normal;
  line-height: normal;
  letter-spacing: normal;
  text-align: left;
  color: #ffffff;
}

.hero {
  background-color: var(--bgColor);
  position: relative;
  z-index: 0;
  .parallax{
    height: 1000px;
    background-image: url(../../images/bg-home.png);
    background-attachment: fixed;
    background-position: center;
    background-repeat: no-repeat;
    background-size: cover;
  }
  &__logo {
    width: 397px;
    height: 84px;
    object-fit: contain;
    position: fixed ;
    top:40%;
    left: 50%;
    transform: translateX(-50%);
  }
  &__title{
    position: fixed ;
    font-size: calc(48px + (110 - 48) * (100vw - 320px) / (1920 - 320));
    top:53%;
    left: 50%;
    transform: translateX(-50%);
    @extend .font-format;
    line-height: 1.02;
    letter-spacing: 0.9px;
    white-space: nowrap;
  }
}
.main{
  background-color: var(--bgColor);
  padding: 7.875rem 0;  
  position: relative;
  z-index: 1;
  &__title{
    @extend .font-format;
    text-align: center;
    font-size: 4.5 rem;
  }
  &__paragraph{
    @extend .font-format;
    text-align: center;
    font-size: 1.25 rem;
  }
}

.sprint{
  background-color: var(--bgColor);
  position: relative;
  z-index: 1;
  &__line{
    &::after {
      content: '';
      position: absolute;
      height: 100vh; 
      border-right: 1px solid #fff;
      top:0;
      right: 0;
      @media(max-width: 768px) {
        display: none;
      }
    }
  }
  &__day{
    @extend .font-format;
    opacity: 0.45;
  }
  &__title{
    color:#fff;
    padding-left: 1rem;
  } 
  &__image{
    display: flex;
    justify-content: center;
  }
}

.process{
  background-color: var(--bgColor);
  position: relative;
  z-index: 2;
  height: 800px;
}

